Spell Check. Tables Of Contents. Tuples section of Lists and Tuples is complete.

--- a/1 Python Basics/1.1 Hello World.md
+++ b/1 Python Basics/1.1 Hello World.md
@@ -1,12 +1,19 @@
 *[Back to index](</readme.md>)*
 ___
-### Hello World
+## Contents
+- [Contents](#contents)
+- [Hello World](#hello-world)
+  - [Print Formatting](#print-formatting)
+  - [F-strings and Printing Variables](#f-strings-and-printing-variables)
+
+___
+## Hello World
 *Typically the first program that will be created*  
 
 A statement or expression is an instruction the computer will run or execute. Perhaps the simplest program that can be written is a print statement. When a print statement is run, Python will display the argument (the value in the parentheses). 
 <details><summary>Hello World</summary>
 
-```python
+```py
 # Ye Olde Hello World
 print ("Hello World")
 ```
@@ -22,7 +29,7 @@ Note it is good practice to comment code:
 
 <details><summary>Code Comments</summary>
 
-```python
+```py
 
 # This is a single-line comment
 """
@@ -38,7 +45,7 @@ Printing on multiple lines:
 
 <details><summary>Multi-Line Printing</summary>
 
-```python
+```py
 # Ye Olde Hello World
 print ("Hello\nWorld")
 ```
@@ -50,12 +57,12 @@ Hello
 World
 ```
 ___
-### F-strings and printing variables
+### F-strings and Printing Variables
 Variables can be included in print statements as follows:
 
 <details><summary>Variable Printing</summary>
 
-```python
+```py
 # Define variable
 num = 3
 
@@ -70,13 +77,13 @@ Hello World 3
 ```
 *(See [Types](<1.2 Types.md>) for more information about variables and strings. )*
 
-This can be done more elegantly with f-strings which caninterpolate variables, objects, and expressions directly into strings. It also allows better control over spacing.
+This can be done more elegantly with f-strings which can interpolate variables, objects, and expressions directly into strings. It also allows better control over spacing.
 
 By prefixing a string with f or F, expressions can be embedded within curly braces ({}), which are evaluated at runtime.
 
 <details><summary>f-string Printing</summary>
 
-```python
+```py
 # Variables
 name = "Bob"
 age = 30
