--- a/1 Python Basics/1.2 Types.md
+++ b/1 Python Basics/1.2 Types.md
@@ -1,6 +1,14 @@
 *[Back to index](</readme.md>)*
 ___
-### Types
+## Contents
+- [Contents](#contents)
+- [Types](#types)
+  - [Comparability](#comparability)
+  - [Type Casting](#type-casting)
+  - [Advanced Type Casting](#advanced-type-casting)
+
+___
+## Types
 
 *A type is how Python represents different types of data.*
 
@@ -8,7 +16,7 @@ Python is an object-oriented language. There are many different types of objects
 
 <details><summary>Variable Types</summary>
 
-```python
+```py
 ## Declare Variables of different types 
 age = 38
 height = 1.6
@@ -31,19 +39,36 @@ Check:  True <class 'bool'>
 ```
 *See [Expressions and Variables](1.3%20Expressions%20and%20Variables.md#variables-from-user-input) for information on variables*
 
-* **Integers:** The set of real numbers with no decimal or fraction; -1, 2, 1000 etc
-* **Floats:** Numbers that contain a decimal; 1.5, 3.14, 166.456 etc
-* **Strings:** A Sequence of characters that can include letters, numbers or symbols; "This is a sring, 33 !"
+* **Integers:** The set of real numbers with no decimal or fraction; -1, 2, 1000 etc.
+* **Floats:** Numbers that contain a decimal; 1.5, 3.14, 166.456 etc.
+* **Strings:** A Sequence of characters that can include letters, numbers or symbols; "This is a string, 33 !"
 * **Boolean:** A data type that can only have one of two possible values, most commonly True/False (Note: case is important)
+
+### Comparability 
+When working with types comparability between and within types can be important, the table below shows how types may compare with eachother:
+
+| **Type**           | **Examples**              | **Comparable Within** | **Comparable Across** | **Notes**                                                     |
+|--------------------|---------------------------|-----------------------|-----------------------|-------------------------------------------------------------------------------------------------|
+| **Numeric Types**  | `int`, `float`, `complex` | Yes                   | Partially             | `int` and `float` are comparable, but `complex` numbers are not directly comparable to others.|
+| **Strings**        | `"apple"`, `"banana"`     | Yes                   | No                    | Strings are compared lexicographically (alphabetically).      |
+| **Booleans**       | `True`, `False`           | Yes                   | Yes                   | `True` is equivalent to `1`, and `False` is equivalent to `0`.|
+| **Lists**          | `[1, 2]`, `[3, 4]`        | Yes                   | No                    | Compared element by element; elements must be comparable.     |
+| **Tuples**         | `(1, 2)`, `(3, 4)`        | Yes                   | No                    | Compared element by element, like lists.                      |
+| **Sets**           | `{1, 2}`, `{3, 4}`        | No                    | No                    | Sets do not support direct ordering comparisons (`<`, `>`).   |
+| **Dictionaries**   | `{"a": 1}`, `{"b": 2}`    | No                    | No                    | Dictionaries are not directly comparable.                     |
+| **Bytes**          | `b'abc'`, `b'def'`        | Yes                   | No                    | Comparable within type (lexicographically).                   |
+| **NoneType**       | `None`                    | No                    | No                    | `None` cannot be compared with other types or even itself (except with `is`).|
+| **Custom Objects** | `MyClass()`               | Optional              | Optional              | Requires custom comparison logic (e.g., implementing `__lt__`, `__eq__`).|
+
 
 There are some limitations when it comes to machines representing real numbers, but floating point numbers are a good representation in most cases. The specifics of floats for a given runtime environment can be checked using `sys.float_info`. This will also show the largest and smallest number that can be represented with them (*Note: `sys` must be imported first*).
 ___
 ### Type Casting
-Expression types can be changed in python, this is called type casting. the integer 2 can be cast to a float as follows:
+Expression types can be changed in python, this is called type casting. The integer 2 can be cast to a float as follows:
 
 <details><summary>Cast Integer to Float</summary>
 
-```python
+```py
 float(2)
 ```
 </details>
@@ -57,7 +82,7 @@ Note that when casting a float to an integer, information can be lost; for examp
 If a string contains an integer value, it can be converted to a float or int; however this is only possible if the string contains only numerical characters; for example
 <details><summary>Cast String to Integer or Float</summary>
 
-```python
+```py
 int('1')
 float('1.2')
 ```
@@ -78,7 +103,7 @@ Similarly a `1`/`0` cast to boolean will result in `True`/`False` respectively.
 
 ___
 ### Advanced Type Casting
-There are more advanced ways to do type casting, for example, taking an [input](1.3%20Expressions%20and%20Variables.md#variables-from-user-input) (which is aways a string), and casting it to an integer; however the required input type should be made clear to the user and [exception handling *Needs Update 3.5](/x3%20Python%20Programming%20Fundamentals/x3.5%20Exception%20Handling.md) is a very good idea.  
+There are more advanced ways to do type casting, for example, taking an [input](1.3%20Expressions%20and%20Variables.md#variables-from-user-input) (which is always a string), and casting it to an integer; however the required input type should be made clear to the user and [exception handling *Needs Update 3.5](/x3%20Python%20Programming%20Fundamentals/x3.5%20Exception%20Handling.md) is a very good idea.  
 <details><summary>Cast User Input to Integer</summary>
 
 ```py
