--- a/1 Python Basics/1.3 Expressions and Variables.md
+++ b/1 Python Basics/1.3 Expressions and Variables.md
@@ -1,9 +1,19 @@
 *[Back to index](</readme.md>)*
 ___
-### Variables
+## Contents
+- [Contents](#contents)
+- [Variables](#variables)
+  - [Variables from user input](#variables-from-user-input)
+- [Expressions](#expressions)
+  - [Modulo](#modulo)
+- [String Exercises](#string-exercises)
+- [Expressions and Variables Exercises:](#expressions-and-variables-exercises)
+___
+
+## Variables
 *Variables are used to store values.*  
 
-The value `1` can be assigned to the variable `my_variable` using the assinment operator (equals sign)
+The value `1` can be assigned to the variable `my_variable` using the assignment operator (equals sign)
 <details><summary>Assign variable</summary>
 
 ```py
@@ -43,7 +53,7 @@ ___
 Variables can be derived from a user input. All variables can then be used elsewhere by recalling the (exact) name of the variable
 <details><summary>request and print variable from user input</summary>
 
-```python
+```py
 # Request User input
 name = input("Hi, What's your name? ")
 
@@ -68,7 +78,7 @@ If comparing a user input variable to numerical values, the input must be conver
 Script to return an answer depending on a user's input:  
 
 **Incorrect:**
-```python
+```py
 age = input("Enter your age: ")
 
 # Check age range
@@ -81,9 +91,9 @@ else:
 ```
 In this case, age is a string. When attempting to compare it with integers using  the `<=` operator, Python throws an error.
 
-To fix this, `age` must be coverted to an integer:  
+To fix this, `age` must be converted to an integer:  
 **Correct**  
-```python
+```py
 # Request user input and onvert to integer
 age = int(input("Enter your age: "))
 
@@ -101,7 +111,7 @@ This ensures that age is treated as an integer, allowing numerical comparisons w
 </details>
 
 ___
-### Expressions  
+## Expressions  
 *Expressions describe a type of operation that computers perform.*  
 
 Expressions in Python can include operations among compatible types (e.g. integers and floats). For example, basic arithmetic operations  
@@ -149,13 +159,33 @@ if number % 2 != 0: # Will return True if the number is odd
 *See [Loops *Needs update 3.2](/x3%20Python%20Programming%20Fundamentals/x3.2%20Loops.md) for loop information.*  
 
 ___
-### Expressions and Variables Excercises:  
-Excercise 1:  
-*Write an expression that calculates how many hours there are in 160 minutes*
+## String Exercises
+
+**Exercise 1:**  
+What is the values of the variables `a`, `b` and `c` in the following code?
+```py
+a = "1"
+b = "2"
+c = a + b
+```
+<details><summary>Click here for the solution</summary>
+
+```
+"1"
+"2"
+"12"
+```
+</details><p></p>
+
+___
+## Expressions and Variables Exercises:  
+
+**Exercise 1:**  
+Write an expression that calculates how many hours there are in 160 minutes
 
 <details><summary>Click here for the solution</summary>
 
-```python
+```py
 160/60
 
 # Or 
@@ -163,12 +193,12 @@ Excercise 1:
 ```
 </details><p></p>
 
-Excercise 2:   
-*Create a script that performs basic operations on numbers. Declare two variables (e.g., num1 and num2), and then perform addition, subtraction, multiplication, and division. Print the results.*
+**Exercise 2:**  
+Create a script that performs basic operations on numbers. Declare two variables (e.g., num1 and num2), and then perform addition, subtraction, multiplication, and division. Print the results.
 
 <details><summary>Click here for the solution</summary>
 
-```python
+```py
 #Define Numbers
 num1 = 5
 num2 = 3
@@ -189,17 +219,17 @@ print ("Division is: ", division_result)
 [Code](<../XXCode Snips/1.3.4 Numerical Operations.py>) 
 </details><p></p>
 
-Excercise 3: 
-*Create a script that takes a temperature in Celsius as user input and converts it to Fahrenheit. The conversion formula is: `F=95×C+32`  
-Ask the user to enter a temperature in Celsius, perform the conversion, and print the result.*  
+**Exercise 2:**  
+Create a script that takes a temperature in Celsius as user input and converts it to Fahrenheit. The conversion formula is: `F=95×C+32`  
+Ask the user to enter a temperature in Celsius, perform the conversion, and print the result.  
 
 <details><summary>Click here for the solution</summary>
 
-```python
-## Conversion from Celcius to Farenheit
+```py
+## Conversion from Celsius to Farenheit
 degree_sign = u"\u00b0"
 # Request input
-temp = input ("What is the Celcius temperature that you would like to convert to farenheiht? ")
+temp = input ("What is the Celsius temperature that you would like to convert to Fahrenheit? ")
 
 # Convert input temp to float
 float_temp = float(temp)
@@ -211,7 +241,7 @@ farenheit = (9/5) * float_temp + 32
 print (temp, degree_sign, "C Is " ,farenheit ,degree_sign,"F")
 
 ```
-[Code](<../XXCode Snips/1.3.5 Celcius to Farenheit.py>) 
+[Code](<../XXCode Snips/1.3.5 Celsius to Farenheit.py>) 
 </details>
 
 
