--- a/1 Python Basics/1.4 String Operations.md
+++ b/1 Python Basics/1.4 String Operations.md
@@ -1,7 +1,22 @@
 *[Back to index](</readme.md>)*
 ___
-### Strings
-*Strings are sequences of characters contained within two quotes (either double or single - just be consistant!)*  
+## Contents
+- [Contents](#contents)
+- [Strings](#strings)
+  - [Indexing](#indexing)
+  - [Slicing](#slicing)
+  - [Stride](#stride)
+  - [Concatenation](#concatenation)
+  - [Escape Sequences](#escape-sequences)
+- [String Operations](#string-operations)
+- [RegEx](#regex)
+  - [Special Sequences](#special-sequences)
+  - [RegEx Functions](#regex-functions)
+- [String Exercises](#string-exercises)
+
+___
+## Strings
+*Strings are sequences of characters contained within two quotes (either double or single - just be consistent!)*  
 
 Strings may contain letters, digits, spaces or special characters  
 ```py
@@ -15,7 +30,7 @@ string = "String with a 3 in it!"
 
 ___
 ### Indexing
-Strings are best thought of as an ordered sequence.Each element in the sequence can be accessed using an index represented by the array of numbers. 
+Strings are best thought of as an ordered sequence. Each element in the sequence can be accessed using an index represented by the array of numbers. 
 
 |S |t |r |i |n |g |  |w |i |t |h |  |a |  |3 |  |i |n |  |i |t |! |  
 |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |  
@@ -96,14 +111,14 @@ Will output:
 ```
 </details><p></p>
 
-**Slicing**  
+### Slicing
 Multiple characters can be obtained from a string using slicing.
 
 |S |t |r |i |n |g |  |w |i |t |h |  |a |  |3 |  |i |n |  |i |t |! |  
 |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |  
 |0 |1 |2 |3 |4 |5 |6 |7 |8 |9 |10|11|12|13|14|15|16|17|18|19|20|21|  
 
-When taking a slice, the first number indictaes the starting index (start at 0), and the second number indictes the length of the slice (start at 1).  
+When taking a slice, the first number indicates the starting index (start at 0), and the second number indicates the length of the slice (start at 1).  
 <details><summary>Take the first 4 characters of the variable</summary>
 
 ```py
@@ -128,7 +143,7 @@ Will output:
 ```
 </details><p></p>
 
-**Stride**  
+### Stride
 Stride values can be found using by indicating a step after the slice (with or without selecting the starting index and length)
 
 
@@ -161,7 +176,7 @@ Will output:
 ```
 </details><p></p>
 
-**Concatenate Strings**  
+### Concatenation  
 
 Two or more strings can be concatenated by using the addition symbol, the result is a new string that is a combination of strings.
 <details><summary>Concatenate two strings</summary>
@@ -206,7 +221,7 @@ Will output:
 
 ___
 ### Escape Sequences
-Back slashes represent the beginning  of escape sequences. Escape sequences represent strings that may be difficult to input. For example, `\n` represents a new line. The output is given by a new line after the `\n` is encountered.
+Back slashes represent the beginning of escape sequences. Escape sequences represent strings that may be difficult to input. For example, `\n` represents a new line. The output is given by a new line after the `\n` is encountered.
 <details><summary>New line escape sequence</summary>
 
 ```py
@@ -220,7 +235,7 @@ with a 3 in it!
 ```
 </details><p></p>
 
-Similarly, back slash  "t" represents a tab:
+Similarly, back slash "t" represents a tab:
 <details><summary>Tab escape sequence</summary>
 
 ```py
@@ -233,7 +248,7 @@ String  with a 3 in it!
 ```
 </details><p></p>
 
-To place a back slash in a string, a double backslash is used, or an `r`can be placed before the string:  
+To place a back slash in a string, a double backslash is used, or an `r` can be placed before the string:  
 <details><summary>Include back slash in string</summary>
 
 ```py
@@ -251,7 +266,7 @@ String \ with a 3 in it!
 *See also [f-strings ](/1%20Python%20Basics/1.1%20Hello%20World.md#f-strings-and-printing-variables)*
 
 ___
-### String Operations
+## String Operations
 There are many string operation methods in Python that can be used to manipulate data. Some basic string operations include:
 
 <details><summary>Upper()</summary>
@@ -288,9 +303,44 @@ After lower: string with a 3 in it!
 ```
 </details><p></p>
 
+<details><summary>Find()</summary>
+
+The method `find()` finds a sub-string. The argument is the substring you would like to find, and the output is the first index of the sequence. We can find the sub-string `with` or `i`.
+
+|S |t |r |i |n |g |  |w |i |t |h |  |a |  |3 |  |i |n |  |i |t |! |  
+|- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |  
+|0 |1 |2 |3 |4 |5 |6 |7 |8 |9 |10|11|12|13|14|15|16|17|18|19|20|21|  
+
+```py
+# Find the substring in the string. Only the index of the first elment of substring in string will be the output
+string = "String with a 3 in it!"
+string.find('with')
+
+# Find the substring in the string.
+string.find('i')
+```
+
+Will output:  
+```
+7
+3
+```
+
+If the sub-string is not in the string then the output is a negative one. For example, the string `'Jasd'` is not a substring:
+```py
+string = "String with a 3 in it!"
+string.find('Jasd')
+```
+
+Will output:  
+```
+-1
+```
+</details><p></p>
+
 <details><summary>Replace()</summary>
 
-The method `replace` replaces a segment of a string; i.e. a substring  with a new string. The first argument represents the substring to be repaced, the second argument is the substring it is to be replaced with. The result is a new string with the segment changed.
+The method `replace` replaces a segment of a string; i.e. a substring  with a new string. The first argument represents the substring to be replaced, the second argument is the substring it is to be replaced with. The result is a new string with the segment changed.
 
 ```py
 # Replace the word 'string' with 'biskit'
@@ -320,43 +370,8 @@ String with a 3 in it
 ```
 </details><p></p>
 
-<details><summary>Find()</summary>
-
-The method `find()` finds a sub-string. The argument is the substring you would like to find, and the output is the first index of the sequence. We can find the sub-string `with` or `i`.
-
-|S |t |r |i |n |g |  |w |i |t |h |  |a |  |3 |  |i |n |  |i |t |! |  
-|- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |  
-|0 |1 |2 |3 |4 |5 |6 |7 |8 |9 |10|11|12|13|14|15|16|17|18|19|20|21|  
-
-```py
-# Find the substring in the string. Only the index of the first elment of substring in string will be the output
-string = "String with a 3 in it!"
-string.find('with')
-
-# Find the substring in the string.
-string.find('i')
-```
-
-Will output:  
-```
-7
-3
-```
-
-If the  sub-string is not in the string then the output is a negative one. For example, the string `'Jasd'` is not a substring:
-```py
-string = "String with a 3 in it!"
-string.find('Jasd')
-```
-
-Will output:  
-```
--1
-```
-</details><p></p>
-
 ___
-### RegEx
+## RegEx
 In Python, RegEx (Regular Expression) is a tool for matching and manipulating strings. Python provides a built-in module called `re`, which allows working with regular expressions. 
 
 The RegEx module provides several functions for working with regular expressions, including `search`, `split`, `findall`, and `sub`. 
@@ -375,7 +390,7 @@ There are several special sequences in RegEx that can be used to match specific 
 |\B              |Matches any position that is not a word boundary                      |"cat" matches "\Bcat\B" in "category" but not in "The cat sat on the mat"|
 
 
-**Special Sequence Examples:**
+### Special Sequences
 
 A simple example of using the `\d` special sequence in a regular expression pattern with Python code.  
 The regular expression pattern is defined as r"\d\d\d\d\d\d\d\d\d\d", which uses the \d special sequence to match any digit character (0-9), and the \d sequence is repeated ten times to match ten consecutive digits:
@@ -397,7 +412,7 @@ Will output:
 Phone number found: 1234567890
 ```
 
-A simple example of using the `\W` special sequence to match any character that is *not* a word character (a-z, A-Z, 0-9, or _). The string we're searching for matches in is "Hello, world!".
+A simple example of using the `\W` special sequence to match any character that is *not* a word character (a-z, A-Z, 0-9, or _). The string we're searching for matches in is `"Hello, world!"`.
 ```py
 pattern = r"\W"  # Matches any non-word character
 text = "Hello, world!"
@@ -410,6 +425,7 @@ Will output:
 ```
 Matches: [',', ' ', '!']
 ```
+### RegEx Functions
 
 <details><summary>Search()</summary>
 
@@ -434,7 +450,6 @@ Will output:
 ```
 Match found!
 ```
-
 </details><p></p>
 
 <details><summary>Findall()</summary>
@@ -454,7 +469,6 @@ Will output:
 ```
 ['it', 'it', 'it']
 ```
-
 </details><p></p>
 
 
@@ -486,7 +500,6 @@ Will output:
 ```
 ['String', 'with', 'a', '3', 'in', 'it!']
 ```
-
 </details><p></p>
 
 
@@ -514,16 +527,15 @@ Will output:
 Biskit with a 3 in it!
 ```
 
-While performing similar tasks, `sub()` Supports regular expressions, allowing for complex pattern matching, it can match and replace based on patterns like character classes, repetitions, and groupings it also allows the use of backreferences and can handle more complex replacements.
+While performing similar tasks, `sub()` Supports regular expressions, allowing for complex pattern matching, it can match and replace based on patterns like character classes, repetitions, and groupings it also allows the use of back references and can handle more complex replacements.
 
 While more powerful and flexible than `replace()`, the `sub()` method is slower and has higher resource overheads; so for simple find and replace tasks `replace()` may be the better option.
-
 </details><p></p>
 
 ___
-### String Excercises
+## String Exercises
 
-Excercise 1:  
+**Exercise 1:**  
 What is the values of the variables `a`, `b` and `c` in the following code?
 ```py
 a = "1"
@@ -540,7 +552,7 @@ c = a + b
 </details><p></p>
 
 ___
-Excercise 2:  
+**Exercise 2:**  
 Use slicing to print out the first three elements of the variable `d`:
 ```py
 d = "ABCDEFG"
@@ -562,7 +574,7 @@ ABC
 </details><p></p>
 
 ___
-Excercise 3:  
+**Exercise 3:**  
 Use a stride value of 2 to print out every second character of the string `e`:
 ```py
 e = 'clocrkr1e1c1t'
@@ -581,7 +593,7 @@ correct
 </details><p></p>
 
 ___
-Excercise 4:  
+**Exercise 4:**  
 Print out a backslash:
 <details><summary>Click here for the solution</summary>
 
@@ -599,7 +611,7 @@ Will output:
 </details><p></p>
 
 ___
-Excercise 5:  
+**Exercise 5:**  
 Convert the variable `f` to uppercase:
 ```
 f = "You are wrong"
@@ -618,7 +630,7 @@ Will output:
 </details><p></p>
 
 ___
-Excercise 6:  
+**Exercise 6:**  
 Convert the variable `f2` to lowercase:
 ```
 f2="YOU ARE RIGHT"
@@ -637,8 +649,8 @@ Will output:
 </details><p></p>
 
 ___
-Excercise 7:  
-find the first index of the sub-string `snow` in the vaariable `g`:  
+**Exercise 7:**  
+find the first index of the sub-string `snow` in the variable `g`:  
 ```
 g = "Mary had a little lamb Little lamb, little lamb Mary had a little lamb \
 Its fleece was white as snow And everywhere that Mary went Mary went, Mary went \
@@ -661,7 +673,7 @@ Will output:
 </details><p></p>
 
 ___
-Excercise 8:  
+**Exercise 8:**  
 In the variable `g`, replace the sub-string `Mary` with `Bob`:
 ```
 g = "Mary had a little lamb Little lamb, little lamb Mary had a little lamb \
@@ -685,7 +697,7 @@ Will output:
 </details><p></p>
 
 ___
-Excercise 9:  
+**Exercise 9:**  
 In the variable `g`, replace the sub-string `,` with `.`:
 ```
 g = "Mary had a little lamb Little lamb, little lamb Mary had a little lamb \
@@ -709,7 +721,7 @@ Will output:
 </details><p></p>
 
 ___
-Excercise 9:  
+**Exercise 10:**  
 In the variable `g`, split the substring to a list:
 ```
 g = "Mary had a little lamb Little lamb, little lamb Mary had a little lamb \
@@ -733,7 +745,7 @@ Will output:
 </details><p></p>
 
 ___
-Excercise 10:  
+**Exercise 11:**  
 In the string `s3`, find the four consecutive digit character using `\d` and `search()` function:
 ```
 s3 = "House number- 1105"
@@ -762,7 +774,7 @@ Digit found
 </details><p></p>
 
 ___
-Excercise 11:  
+**Exercise 12:**  
 In the string `str1`, replace the sub-string `fox` with `bear` using `sub()` function:
 ```
 str1= "The quick brown fox jumps over the lazy dog."
@@ -787,7 +799,7 @@ The quick brown bear jumps over the lazy dog.
 </details><p></p>
 
 ___
-Excercise 11:  
+**Exercise 13:**  
 In the string `str2` find all the occurrences of `woo` using `findall()` function:
 ```
 str2= "How much wood would a woodchuck chuck, if a woodchuck could chuck wood?"
