--- a/1 Python Basics/1.4 String Operations.md
+++ b/1 Python Basics/1.4 String Operations.md
@@ -12,6 +12,10 @@ ___
 - [RegEx](#regex)
   - [Special Sequences](#special-sequences)
   - [RegEx Functions](#regex-functions)
+    - [Search](#search)
+    - [Findall](#findall)
+    - [Split](#split)
+    - [Sub](#sub)
 - [String Exercises](#string-exercises)
 
 ___
@@ -427,7 +431,7 @@ Matches: [',', ' ', '!']
 ```
 ### RegEx Functions
 
-<details><summary>Search()</summary>
+#### Search
 
 The `search()` function searches for specified patterns within a string. Here is an example that explains how to use the `search()` function to search for the word `"with"` in the string `"String with a 3 in it!"`.
 ```py
@@ -450,9 +454,8 @@ Will output:
 ```
 Match found!
 ```
-</details><p></p>
 
-<details><summary>Findall()</summary>
+#### Findall
 
 The `findall()` function finds all occurrences of a specified pattern within a string.
 ```py
@@ -469,12 +472,10 @@ Will output:
 ```
 ['it', 'it', 'it']
 ```
-</details><p></p>
 
+#### Split
 
-<details><summary>Split()</summary>
-
-The method `split()` splits the string at the specified separator, and returns a list
+The method `split()` splits the string at the specified separator, and returns a [list](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#lists)
 ```py
 #Split the substring into list
 string = "String with a 3 in it!"
@@ -500,10 +501,8 @@ Will output:
 ```
 ['String', 'with', 'a', '3', 'in', 'it!']
 ```
-</details><p></p>
 
-
-<details><summary>Sub()</summary>
+#### Sub
 
 The `sub()` function of a regular expression in Python is used to replace all occurrences of a pattern in a string with a specified replacement.
 ```py
@@ -530,7 +529,6 @@ Biskit with a 3 in it!
 While performing similar tasks, `sub()` Supports regular expressions, allowing for complex pattern matching, it can match and replace based on patterns like character classes, repetitions, and groupings it also allows the use of back references and can handle more complex replacements.
 
 While more powerful and flexible than `replace()`, the `sub()` method is slower and has higher resource overheads; so for simple find and replace tasks `replace()` may be the better option.
-</details><p></p>
 
 ___
 ## String Exercises
