--- a/x3 Python Programming Fundamentals/x3.2 Loops.md
+++ b/x3 Python Programming Fundamentals/x3.2 Loops.md
@@ -704,3 +704,8 @@ print(New)
 
 
 <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/SNIBMfooter.png" alt="" width="" height="">
+
+
+
+**Task 12: Conditionals and Lists**  
+Create a script that generates a list of random numbers (between 1 and 100) of a specified length. Then, use conditionals to categorize the numbers into "even" and "odd" groups. Print the resulting lists.  
