--- a/2 Python Data Structures/2.1 Lists and Tuples.md
+++ b/2 Python Data Structures/2.1 Lists and Tuples.md
@@ -67,12 +67,13 @@ The type of a tuple is `tuple`, however each element within a tuple may have its
 
 The type of individual element can be printed:
 ```py
-tuple = ("disco", 10, 1.2)
+tuple = ("disco", 10, 1.2, True)
 
 # Print the type of value on each index
 print(type(tuple[0]))
 print(type(tuple[1]))
 print(type(tuple[2]))
+print(type(tuple[3]))
 ```
 
 Will output:  
